cmake_minimum_required(VERSION 3.5)
project(RRobotsV2)
include_directories(include)
file(GLOB SOURCES "*.cpp")
add_executable(RRobotsV2 ${SOURCES})
set(CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}/modules")

find_package(SDL2 REQUIRED)
find_package(SDL2_image REQUIRED)
include_directories(${SDL2_INCLUDE_DIRS} ${SDL2_IMAGE_INCLUDE_DIRS})
target_link_libraries(RRobotsV2 ${SDL2_LIBRARIES} ${SDL2_IMAGE_LIBRARIES})
