cmake_minimum_required(VERSION 3.5)
set (CMAKE_CXX_STANDARD 11)
project(RRobotsV2)
include_directories(include)
file(GLOB SOURCES "*.cpp")
set(CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}/modules")

find_package(SDL2 REQUIRED)
find_package(SDL2_image REQUIRED)
find_package(SDL2_mixer REQUIRED)
find_package(SDL2_net REQUIRED)
# find_package(SDL2_ttf REQUIRED)

include_directories(${SDL2_INCLUDE_DIRS} ${SDL2_IMAGE_INCLUDE_DIRS} ${SDL2_MIXER_INCLUDE_DIRS} ${SDL2_NET_INCLUDE_DIRS})
# ${SDL2_TTF_INCLUDE_DIRS})
target_link_libraries(RRobotsV2 ${SDL2_LIBRARIES} ${SDL2_IMAGE_LIBRARIES} ${SDL_2_MIXER_LIBRARIES} ${SDL2_NET_LIBRARIES})
# ${SDL2_TTF_LIBRARIES})
add_executable(RRobotsV2 ${SOURCES})
